welcome.lessons.welcome.bat.bool2.AlarmClock.scala.error
alarmClock:25: error: type mismatch;
 found   : Int(0)
 required: String
  return 0
         ^